fix but for trangle and navbar

--- a/partials/radio.html
+++ b/partials/radio.html
@@ -25,7 +25,7 @@
                 <div class="service-box">
                     <i class="fa fa-share-alt-square fa-3x"></i>
                     <h3>United States Broadcasts</h3>
-                    <p class="text-muted">Find your <a href="http://www.lighthousereport.com/stations.html">local broadcast</a> in the USA.</p>
+                    <p class="text-muted">Find your <a href="http://www.lighthousereport.com/stations.html" target="_blank">local broadcast</a> in the USA.</p>
                 </div>
             </div>
             <div class="col-sm-4 col-xs-12 text-center">
