--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,6 @@
-<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid bg-primary">
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top affix-top"
+     data-spy="affix" data-offset-top="100">
+    <div class="container-fluid" ng-class="{'bg-primary' : checkURL()}" >
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
