--- a/partials/resources.html
+++ b/partials/resources.html
@@ -48,7 +48,7 @@
                 <uib-accordion close-others="true">
                     <uib-accordion-group is-open="status.isFirstOpen">
                         <uib-accordion-heading>
-                            Our Recommendations
+                            <strong>Our Recommendations</strong>
                             <i class="pull-right glyphicon"
                                ng-class="{'glyphicon-chevron-up': status.isFirstOpen, 'glyphicon-chevron-down': !status.isFirstOpen}">
                             </i>
@@ -104,7 +104,7 @@
 
                     <uib-accordion-group is-open="status.isSecondOpen">
                         <uib-accordion-heading>
-                            Endorsed Partner Tools
+                            <strong>Endorsed Partner Tools</strong>
                             <i class="pull-right glyphicon"
                                ng-class="{'glyphicon-chevron-up': status.isSecondOpen, 'glyphicon-chevron-down': !status.isSecondOpen}">
                             </i>
@@ -173,7 +173,7 @@
 
                     <uib-accordion-group is-open="status.isThirdOpen">
                         <uib-accordion-heading>
-                            Other Ideas
+                            <strong>Other Ideas</strong>
                             <i class="pull-right glyphicon"
                                ng-class="{'glyphicon-chevron-up': status.isThirdOpen, 'glyphicon-chevron-down': !status.isThirdOpen}">
                             </i>
