--- a/partials/support.html
+++ b/partials/support.html
@@ -7,64 +7,86 @@
     <div class="diagonal diagonal_bottom pre_s_2"></div>
 </div>
 
-
-
 <!-- MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM --- PARTIAL BODY STARTS HERE  MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM-->
 
 <section id="about" class="bg-default">
     <div id="showresp">
         <section id="download">
             <div class="container">
-                <div class="row">
+                <div class="row" ng-if="!supmsg">
                     <div class="col-lg-12 text-center">
                         <h2 class="section-heading">Welcome to MYLC Support</h2>
                         <hr class="primary">
                     </div>
                     <div class="subtitle text-muted text-center">We are Here to Help!</div>
                 </div>
+                <div ng-show="supmsg" ng-bind-html="renderHtml(supmsg)"></div>
             </div>
             <!-- end container -->
         </section>
         <!-- end contact section -->
-        <section id="form">
+        <section id="supform">
             <div class="container">
                 <div class="row">
                     <!--- form row begins -->
                     <div class="col-lg-8 col-lg-offset-2 text-center">
-                        <form id="formvals">
+                        <form id="supFm" name="supFm" class="form" novalidate ng-if="!supmsg">
                             <input type="hidden" name="post_actions" value="support" />
                             <div class="row">
                                 <div class="form-group col-xs-12">
-                                    <!-- <label>Name</label> -->
-                                    <input type="text" class="form-control" placeholder=" Your Name" name="nameline" />
-                                    <p class="help-block text-danger"></p>
+                                    <label class="sr-only" for="name">your name</label>
+                                    <input type="text" class="form-control"
+                                           placeholder=" Your Name" name="nameline" id="name"
+                                           ng-model="support.nameline" required/>
+                                    <p class="text-danger"
+                                       ng-show="supFm.nameline.$touched && supFm.nameline.$error.required">
+                                        Your name is required
+                                    </p>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="form-group col-xs-12">
-                                    <!-- <label>Email Address</label>  -->
-                                    <input type="email" class="form-control" placeholder=" Your Email" name="email" />
-                                    <p class="help-block text-danger"></p>
+                                    <label class="sr-only" for="email">your email</label>
+                                    <input type="email" class="form-control"
+                                           placeholder=" Your Email" name="email"
+                                           id="email" ng-model="support.email" ng-pattern="EMAIL_PATTERN" required/>
+                                    <p class="text-danger"
+                                       ng-show="supFm.email.$touched && supFm.email.$error.required">
+                                        The email is required and cannot be empty
+                                    </p>
+
+                                    <p class="text-danger"
+                                       ng-show="supFm.email.$dirty && supFm.email.$error.pattern">The input is
+                                        not a valid email address
+                                    </p>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="form-group col-xs-12">
-                                    <!-- <label>Email Address</label>  -->
-                                    <input type="topic" class="form-control" placeholder=" Subject" name="topic" />
-                                    <p class="help-block text-danger"></p>
+                                    <label class="sr-only" for="topic">your topic</label>
+                                    <input type="topic" class="form-control" placeholder=" Subject"
+                                           name="topic" id="topic" ng-model="support.topic"/>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="form-group col-xs-12">
-                                    <!-- <label>Message</label> -->
-                                    <textarea name="message" rows="5" class="form-control" placeholder=" Your Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
+                                    <label class="sr-only" for="message">your message</label>
+                                    <textarea name="message" rows="5" class="form-control"
+                                              placeholder=" Your Message" id="message"
+                                              ng-model="support.message" required></textarea>
+                                    <p class="text-danger"
+                                       ng-show="supFm.message.$touched && supFm.message.$error.required">
+                                        Please enter a message.
+                                    </p>
                                 </div>
                             </div>
                             <div class="row">
                                 <div id="success">
                                     <div class="form-group col-xs-12">
-                                        <button type="submit" id="frmsbmt" class="btn btn-primary btn-xl wow tada">Get Help<i class="fa fa-send"></i></button>
+                                        <button type="submit" id="frmsbmt" class="btn btn-primary btn-xl wow tada"
+                                                ng-disabled="supFm.$invalid" ng-click="getSupport(support)">
+                                            Get Help<i class="fa fa-send"></i>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
