--- a/partials/home.html
+++ b/partials/home.html
@@ -205,7 +205,7 @@
                         <!--- form row begins -->
                         <div class="col-lg-8 col-lg-offset-2 text-center">
                             <form id="learnFm" name="learnFm" class="form" novalidate ng-if="!msg">
-                                <input type="hidden" name="post_actions" value="joinacts"/>
+                                <input type="hidden" ng-model="user.post_actions" ng-init="user.post_actions='joinacts'"/>
                                 <div class="row">
                                     <div class="form-group col-xs-12 has-feedback">
                                         <label class="sr-only" for="name">your name</label>
@@ -282,7 +282,7 @@
                                     <div id="success">
                                         <div class="form-group col-xs-12">
                                             <button type="submit" id="frmsbmt" class="btn btn-primary btn-xl wow tada"
-                                                    ng-disabled="learnFm.$invalid" ng-click="subscribe(user)">
+                                                    ng-disabled="learnFm.$invalid" ng-click="submitFm(user)">
                                                 Get Started<i class="fa fa-send"></i>
                                             </button>
                                         </div>
