fix nav backgroud color

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top" scroll-position="scroll"
      ng-class="{'affix-top': scroll < 100, 'affix': scroll >100}">
-    <div class="container-fluid" ng-class="{'bg-primary' : checkURL()}" >
+    <div class="container-fluid" ng-class="{'bg-primary' : checkbg}" >
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
